[project]
name = "autoresearch"
version = "0.1.0"
description = "Zero-order diffusion autoresearcher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scipy>=1.14.0",
    "torch==2.9.1",
    "torchvision>=0.22.0",
    "wandb>=0.18.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
